--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
                 </article>
     
                 <article class="productos__producto">
-                    <div class="producto__img">
-                        <img class="imagen__ruter" src="assets/img/imagen_producto_3.png">
+                    <div class="producto__img producto__img--modificador">
+                        <img class="imagen__img" src="assets/img/imagen_producto_3.png">
                     </div>
     
                     <div class="producto__info">
